# embed_test2

./: .gitignore  CMakeLists.txt  README.md  dummy.pyi  script.py  test.py
include/: dummy.h  python_script.h
src/: dummy.cpp  main.cpp  python_script.cpp
